objects/wkitsm__LogRecording__c.object
<CustomObject>
    <fields>
        <fullName>wkitsm__Callouts__c</fullName>
        <label>Callouts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__CpuTime__c</fullName>
        <label>CPU Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkitsm__Dml__c</fullName>
        <label>DML</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__ErrorId__c</fullName>
        <description>Unique Error Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Error Id</inlineHelpText>
        <label>Error ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__ExceptionMessage__c</fullName>
        <label>Exception Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkitsm__ExceptionStackTrace__c</fullName>
        <label>Exception Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkitsm__ExceptionType__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__HeapSize__c</fullName>
        <label>Heap Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__QueryRows__c</fullName>
        <label>Query Rows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__RunningUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Running User when error occurred.</description>
        <inlineHelpText>Running User when error occurred.</inlineHelpText>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LogRecordings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__Soql__c</fullName>
        <label>SOQL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log Recording</label>
    <listViews>
        <fullName>wkitsm__All</fullName>
        <columns>NAME</columns>
        <columns>wkitsm__Reason__c</columns>
        <columns>wkitsm__Title__c</columns>
        <columns>wkitsm__Dml__c</columns>
        <columns>wkitsm__Soql__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Recordings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>